--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
