--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "meadowlark.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect": "^3.6.0",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.1",
     "formidable": "^1.1.1",
-    "jquery-file-upload-middleware": "^0.1.8"
+    "jquery-file-upload-middleware": "^0.1.8",
+    "node-mailer": "^0.1.1",
+    "static-favicon": "^2.0.0-alpha"
   },
   "repository": {
     "type": "git",
