--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "express-logger": "0.0.3",
     "express-session": "^1.15.1",
     "formidable": "^1.1.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^2.0.0",
     "jquery-file-upload-middleware": "^0.1.8",
+    "jshint": "^2.9.4",
+    "loadtest": "^2.3.0",
     "morgan": "^1.8.1",
     "node-mailer": "^0.1.1",
     "static-favicon": "^2.0.0-alpha"
