--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "meadowlark.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bson": "^1.0.4",
     "connect": "^3.6.0",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
@@ -19,6 +20,8 @@
     "jquery-file-upload-middleware": "^0.1.8",
     "jshint": "^2.9.4",
     "loadtest": "^2.3.0",
+    "mongodb": "^2.2.25",
+    "mongoose": "^3.8.40",
     "morgan": "^1.8.1",
     "node-mailer": "^0.1.1",
     "static-favicon": "^2.0.0-alpha"
