--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^3.8.40",
     "morgan": "^1.8.1",
     "node-mailer": "^0.1.1",
+    "session-mongoose": "^0.4.1",
     "static-favicon": "^2.0.0-alpha"
   },
   "repository": {
