--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.17.1",
     "bson": "^1.0.4",
     "connect": "^3.6.0",
+    "connect-rest": "^0.9.12",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "csurf": "^1.9.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
@@ -37,9 +39,14 @@
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-uglify": "^2.2.0",
     "grunt-exec": "^2.0.0",
+    "grunt-hashres": "^0.4.1",
     "mocha": "^3.2.0",
+    "restler": "^3.4.0",
     "zombie": "^5.0.5"
   },
   "scripts": {
