added additional models controllers

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.1",
     "bson": "^1.0.4",
     "connect": "^3.6.0",
+    "connect-bundle": "0.0.5-beta",
     "connect-rest": "^0.9.12",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
@@ -45,6 +46,7 @@
     "grunt-contrib-uglify": "^2.2.0",
     "grunt-exec": "^2.0.0",
     "grunt-hashres": "^0.4.1",
+    "grunt-lint-pattern": "^0.1.4",
     "mocha": "^3.2.0",
     "restler": "^3.4.0",
     "zombie": "^5.0.5"
