--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "connect-rest": "^0.9.12",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
-    "csurf": "^1.9.0",
+    "csrf": "^3.0.6",
+    "csurf": "^1.8.3",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "express-logger": "0.0.3",
@@ -27,7 +28,10 @@
     "mongoose": "^3.8.40",
     "morgan": "^1.8.1",
     "node-mailer": "^0.1.1",
-    "q": "^1.4.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "q": "^1.5.0",
     "session-mongoose": "^0.4.1",
     "static-favicon": "^2.0.0-alpha",
     "vhost": "^3.0.2"
